--- a/QL_ThuVien/QL_ThuVien/Areas/Admin/Views/Shared/_SidebarPartialView.cshtml
+++ b/QL_ThuVien/QL_ThuVien/Areas/Admin/Views/Shared/_SidebarPartialView.cshtml
@@ -14,8 +14,9 @@
             </div>
         </div>
         <div class="navbar-nav w-100">
-            <a href="index.html" class="nav-item nav-link active"><i class="fa fa-tachometer-alt me-2"></i>Trang chính</a>
+            <a class="nav-item nav-link active" asp-area="Admin" asp-controller="Home" asp-action="Index"><i class="fa fa-tachometer-alt me-2" ></i>Trang chính</a>
             <a href="widget.html" class="nav-item nav-link"><i class="fa fa-th me-2"></i>Tài khoản</a>
+            <a href="chart.html" class="nav-item nav-link"><i class="fa fa-chart-bar me-2"></i>Loại sách</a>
             <a href="form.html" class="nav-item nav-link"><i class="fa fa-keyboard me-2"></i>Đầu sách</a>
             <a href="form.html" class="nav-item nav-link"><i class="fa fa-keyboard me-2"></i>Tác giả</a>
             <a href="form.html" class="nav-item nav-link"><i class="fa fa-keyboard me-2"></i>Kệ sách</a>
