--- a/QL_ThuVien/QL_ThuVien/Areas/Admin/Views/Shared/_SidebarPartialView.cshtml
+++ b/QL_ThuVien/QL_ThuVien/Areas/Admin/Views/Shared/_SidebarPartialView.cshtml
@@ -19,7 +19,7 @@
             <a href="chart.html" class="nav-item nav-link"><i class="fa fa-chart-bar me-2"></i>Loại sách</a>
             <a href="form.html" class="nav-item nav-link"><i class="fa fa-keyboard me-2"></i>Đầu sách</a>
             <a href="form.html" class="nav-item nav-link"><i class="fa fa-keyboard me-2"></i>Tác giả</a>
-            <a href="form.html" class="nav-item nav-link"><i class="fa fa-keyboard me-2"></i>Kệ sách</a>
+            <a asp-area="Admin" asp-controller="AdminKeSach" asp-action="Index" class="nav-item nav-link"><i class="fa fa-keyboard me-2"></i>Kệ sách</a>
             <a href="form.html" class="nav-item nav-link"><i class="fa fa-keyboard me-2"></i>Khoa</a>
             <a href="table.html" class="nav-item nav-link"><i class="fa fa-table me-2"></i>Mượn/trả sách</a>
             <a href="chart.html" class="nav-item nav-link"><i class="fa fa-chart-bar me-2"></i>Thống kê</a>
